--- a/README.Rmd
+++ b/README.Rmd
@@ -17,10 +17,16 @@ output: github_document
 
 ## Installation
 
+You can install the **stable** version from [CRAN](https://cran.r-project.org/web/packages/psymonitor/index.html)
+
+``` r 
+install.packages("psymonitor")
+```
+
 You can install the **development** version from
 [GitHub](https://github.com/itamarcaspi/psymonitor/)
 
-```r
+``` r 
 # install.packages("devtools")
 devtools::install_github("itamarcaspi/psymonitor")
 ```
