fixed RNG compatability

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,7 @@ output: github_document
 [![Travis build status](https://travis-ci.org/itamarcaspi/psymonitor.svg?branch=master)](https://travis-ci.org/itamarcaspi/psymonitor)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/itamarcaspi/psymonitor?branch=master&svg=true)](https://ci.appveyor.com/project/itamarcaspi/psymonitor)
 [![CRAN status](https://www.r-pkg.org/badges/version/psymonitor)](https://cran.r-project.org/package=psymonitor)
+[![metacran downloads](https://cranlogs.r-pkg.org/badges/psymonitor)](https://cran.r-project.org/package=psymonitor)
 
 
 `psymonitor` provides an accessible implementation of the popular real-time monitoring strategy proposed by Phillips, Shi and Yu (2015a,b;PSY), along with a new bootstrap procedure designed to mitigate the potential impact of heteroskedasticity and to effect family-wise size control in recursive testing algorithms (Phillips and Shi, forthcoming). This methodology has been shown effective for bubble and crisis detection (PSY, 2015a,b; Phillips and Shi, 2017) and is now widely used by academic researchers, central bank economists, and fiscal regulators.
